# XYZEngine

./: CMakeLists.txt  CMakePresets.json  README.md
XYZEngine/: CMakeLists.txt
XYZEngine/include/: AudioComponent.h  CameraComponent.h  ColliderComponent.h  Collision.h  Component.h  DelayActionComponent.h  DestroySelfComponent.h  DummyComponent.h  FPSCountComponent.h  Game.h  GameObject.h  GameWorld.h  InputComponent.h  PhysicsSystem.h  RenderSystem.h  ResourceSystem.h  RigidbodyComponent.h  Scene.h  SpriteColliderComponent.h  SpriteRendererComponent.h  TransformComponent.h  Trigger.h
XYZEngine/src/: AudioComponent.cpp  CameraComponent.cpp  ColliderComponent.cpp  Component.cpp  DelayActionComponent.cpp  DestroySelfComponent.cpp  DummyComponent.cpp  FPSCountComponent.cpp  Game.cpp  GameObject.cpp  GameWorld.cpp  InputComponent.cpp  PhysicsSystem.cpp  RenderSystem.cpp  ResourceSystem.cpp  RigidbodyComponent.cpp  SpriteColliderComponent.cpp  SpriteRendererComponent.cpp  TransformComponent.cpp
